pop: fix the scrollbar being under the backdrop

--- a/src/components/pop/pop.scss
+++ b/src/components/pop/pop.scss
@@ -1,12 +1,11 @@
 .uex-pop {
-  overflow-x: hidden;
-  overflow-y: auto;
   position: absolute;
   background: white;
   border: 1px solid rgba(0,0,0,.15);
   box-shadow: 0 5px 10px rgba(0,0,0,.12);
   border-radius: 6px;
   z-index: 1042;
+  display: flex;
 }
 
 .uex-pop.ng-enter {
@@ -39,4 +38,7 @@
 .uex-pop-content {
   padding: 10px;
   position: relative;
+  overflow-x: hidden;
+  overflow-y: auto;
+  flex: 1;
 }
